<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/coupon_photo"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:contentDescription="@string/coupon_photo" />

        <LinearLayout
            style="@style/detail_container"
            android:orientation="vertical" >

            <TextView
                style="@style/detail_title"
                android:text="@string/coupon_title" />

            <View style="@style/detail_separator" />

            <TextView
                android:id="@+id/coupon_title"
                style="@style/detail_value" />
        </LinearLayout>

        <LinearLayout
            style="@style/detail_container"
            android:orientation="vertical" >

            <TextView
                style="@style/detail_title"
                android:text="@string/coupon_text" />

            <View style="@style/detail_separator" />

            <TextView
                android:id="@+id/coupon_text"
                style="@style/detail_value" />
        </LinearLayout>

        <LinearLayout
            style="@style/detail_container"
            android:orientation="vertical" >

            <TextView
                style="@style/detail_title"
                android:text="@string/coupon_category" />

            <View style="@style/detail_separator" />

            <TextView
                android:id="@+id/coupon_category"
                style="@style/detail_value" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>